--- a/public/index.html
+++ b/public/index.html
@@ -1,74 +1,52 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Russian Grammar</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Bootstrap demo</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-</head>
+  <body>
+    <div class="container-fluid">
+      <div class="row bg-light">
+        <div id="nav-placeholder"></div>
+      </div>
+    </div>
 
-<body>
-	<div class="container">
-		<div class="row">
-			<div class="col">
+    <div class="container">
+      <div class="row" style="height: 100px"></div>
 
+      <div class="row">
+        <div class="col">
+          <h1>About</h1>
+        </div>
+      </div>
+      <div class="row">
+        <p>Welcome! This is a website designed to help users learn about 
+          Russian grammar in a one stop shop for all basic grammar needs.
+          There are tabs available for learning what each case is for and 
+          how words decline for those cases. There are tabs for the pronouns
+          and their declinations. There is a tab for verb conjugation. Finally,
+          there is a dictionary built into the navigation bar for translation from 
+          English to Russian and vice versa!
+        </p>
+      </div>
+    </div>
 
-				<h1>Demo</h1>
-				<p>See README for more</p>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
 
-				<input type="text" id="textToTranslate">
-				<button type="button" id="translateBtn">Translate</button>
-
-				<!-- The place where we will display results -->
-				<div class="randomUser"></div>
-
-			</div>
-		</div>
-	</div>
-
-
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<!-- <script src="assets/js/main.js"></script> -->
-
-	<script>
-		$("#translateBtn").click(function() {
-
-			let textToTranslate = $("#textToTranslate").val();
-			console.log(textToTranslate);
-
-			const cyrillicPattern = /^[\u0400-\u04FF]+$/;
-
-			// ping our api server, adding the input text to the url
-			fetch("http://localhost:3000/api/" + textToTranslate)
-				.then(response => {
-					// convert to json
-					return response.json();
-				})
-				.then(data => {
-					console.log(data);
-	
-					if (data!= `No translations found for text \\"${textToTranslate}\\" among available dictionaries`){
-						// display on page
-						$(".randomUser").html(`
-						${data.Translation.Heading} ${data.Translation.Translation}`);
-						console.log(data.Translation.Translation);
-					}
-					else {
-						$(".randomUser").html(`null`);
-					}
-
-					
-		
-				});
-		});
-
-	</script>
-
-</body>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="main.js"></script>
+    <script src="nav.js"></script>
+  </body>
 </html>
