--- a/public/nav.html
+++ b/public/nav.html
@@ -14,7 +14,7 @@
 
   <body>
     <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg bg-light static-top">
+      <nav class="navbar navbar-expand-xl bg-light static-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"
             ><h2>Ultimate Guide to Russian Grammar</h2></a
