--- a/public/pronouns.html
+++ b/public/pronouns.html
@@ -13,10 +13,10 @@
   </head>
 
   <body>
-
-    <h1>pronouns</h1>
     <div class="container-fluid">
-      <div id="nav-placeholder"></div>
+      <div class="row bg-light">
+        <div id="nav-placeholder"></div>
+      </div>
     </div>
   </body>
 
