--- a/public/accusative.html
+++ b/public/accusative.html
@@ -23,7 +23,8 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-3 bg-light vh-100">
+        <div class="col-xxl-1 col-xl-2 col-md-3 col-3 bg-light vh-100">
+        
           <div style="height: 50px"></div>
           <nav class="nav nav-pills flex-column bg-light">
             <a class="nav-link" href="nominative.html">Nominative</a>
@@ -34,7 +35,7 @@
             <a class="nav-link" href="prepositional.html">Prepositional</a>
           </nav>
         </div>
-        <div class="col-9">
+        <div class="col-xxl-11 col-xl-10 col-md-9 col-9">
           <div style="height: 50px"></div>
           <h2>Accusative Case</h2>
           <p>
