--- a/public/adjectives.html
+++ b/public/adjectives.html
@@ -13,9 +13,73 @@
   </head>
 
   <body>
-    <div class="container-fluid">
-      <div class="row bg-light">
-        <div id="nav-placeholder"></div>
+    <div id="nav-placeholder"></div>
+
+    <div class="container">
+      <div class="row" style="height: 50px;"></div>
+      <div class="row">
+        <h2>Adjectives</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <td></td>
+              <th>Masculine</th>
+              <th>Feminine</th>
+              <th>Neuter</td>
+              <th>Plural</th>
+          </thead>
+          <tbody>
+            
+            <tr>
+              <th scope="row">Nominative</th>
+              <td>ый</td>
+              <td>ая</td>
+              <td>ое</td>
+              <td>ые</td>
+            </tr>
+            <tr>
+              <th scope="row">Accusative <br>
+                              Animate
+              </th>
+              <td>ый <br>
+                  его</td>
+              <td>ую</td>
+              <td>ое</td>
+              <td>ые <br>
+                  ых
+              </td>
+            </tr>
+            <tr>
+              <th scope="row">Dative</th>
+              <td>ому</td>
+              <td>ой</td>
+              <td>ому</td>
+              <td>ым
+              </td>
+            </tr>
+            <tr>
+              <th scope="row">Genitive</th>
+              <td>ого</td>
+              <td>ую</td>
+              <td>ого</td>
+              <td>ых</td>
+            </tr>
+            <tr>
+              <th scope="row">Instrumental</th>
+              <td>ым</td>
+              <td>ой</td>
+              <td>ым</td>
+              <td>ыми</td>
+            </tr>
+            <tr>
+              <th scope="row">Prepositional</th>
+              <td>ом</td>
+              <td>ой</td>
+              <td>ым</td>
+              <td>ых</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </body>
