--- a/public/cases.html
+++ b/public/cases.html
@@ -15,17 +15,13 @@
   </head>
 
   <body>
-    <div class="container-fluid">
-      <div class="row bg-light">
-        <div id="nav-placeholder"></div>
-      </div>
-    </div>
+    <div id="nav-placeholder"></div>
     
     <div class="container-fluid">
       <div class="row">
-        <div class="col-xxl-1 col-xl-2 col-md-3 col-3 bg-light vh-100">
+        <div class="col-xxl-1 col-xl-2 col-md-3 col-3 red-background vh-100">
           <div style="height: 50px"></div>
-          <nav class="nav nav-pills flex-column bg-light">
+          <nav class="nav nav-pills flex-column red-background">
             <a class="nav-link" href="nominative.html">Nominative</a>
             <a class="nav-link" href="accusative.html">Accusative</a>
             <a class="nav-link" href="dative.html">Dative</a>
