--- a/public/pronouns.html
+++ b/public/pronouns.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Pronouns</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,9 +13,439 @@
   </head>
 
   <body>
-    <div class="container-fluid">
-      <div class="row bg-light">
-        <div id="nav-placeholder"></div>
+    <div id="nav-placeholder"></div>
+    <div class="container">
+      <div class="row" style="height: 50px;"></div>
+      <h3>Singular Personal Pronouns</h3>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">1st Person</th>
+            <th scope="col">2nd Person</th>
+            <th scope="col">3rd Person (masculine)</th>
+            <th scope="col">1st Person (feminine)</th>
+            <th scope="col">1st Person (neuter)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">English</th>
+            <td>I, Me</td>
+            <td>You</td>
+            <td>He, Him</td>
+            <td>She, Her</td>
+            <td>It</td>
+          </tr>
+          <tr>
+            <th scope="row">Nominative</th>
+            <td>Я</td>
+            <td>Ты</td>
+            <td>Он</td>
+            <td>Она</td>
+            <td>Оно</td>
+          </tr>
+          <tr>
+            <th scope="row">Accusative</th>
+            <td>Меня</td>
+            <td>Тебя</td>
+            <td>Его</td>
+            <td>Её</td>
+            <td>Его</td>
+          </tr>
+          <tr>
+            <th scope="row">Dative</th>
+            <td>Мне</td>
+            <td>Тебе</td>
+            <td>Ему</td>
+            <td>Ей</td>
+            <td>Ему</td>
+          </tr>
+          <tr>
+            <th scope="row">Genitive</th>
+            <td>Меня</td>
+            <td>Тебя</td>
+            <td>Его</td>
+            <td>Её</td>
+            <td>Его</td>
+          </tr>
+          <tr>
+            <th scope="row">Instrumental</th>
+            <td>Мной</td>
+            <td>Тобой</td>
+            <td>Им</td>
+            <td>Ей</td>
+            <td>Им</td>
+          </tr>
+          <tr>
+            <th scope="row">Prepositional</th>
+            <td>Мне</td>
+            <td>Тебе</td>
+            <td>Нём</td>
+            <td>Ней</td>
+            <td>Нём</td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="row" style="height: 50px"></div>
+      <h3>Plural Personal Pronouns</h3>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">1st Person</th>
+            <th scope="col">2nd Person</th>
+            <th scope="col">3rd Person</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">English</th>
+            <td>We, Us</td>
+            <td>You (formal), you all</td>
+            <td>They, Them</td>
+          </tr>
+          <tr>
+            <th scope="row">Nominative</th>
+            <td>Мы</td>
+            <td>Вы</td>
+            <td>Они</td>
+          </tr>
+          <tr>
+            <th scope="row">Accusative</th>
+            <td>Нас</td>
+            <td>Вас</td>
+            <td>Их</td>
+          </tr>
+          <tr>
+            <th scope="row">Dative</th>
+            <td>Нам</td>
+            <td>Вам</td>
+            <td>Им</td>
+          </tr>
+          <tr>
+            <th scope="row">Genitive</th>
+            <td>Нас</td>
+            <td>Вас</td>
+            <td>Их</td>
+          </tr>
+          <tr>
+            <th scope="row">Instrumental</th>
+            <td>Нами</td>
+            <td>Вами</td>
+            <td>Ими</td>
+          </tr>
+          <tr>
+            <th scope="row">Prepositional</th>
+            <td>Нас</td>
+            <td>Вас</td>
+            <td>Них</td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="row" style="height: 50px"></div>
+      <h3>Singular Possesive Pronouns</h3>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th class="text-center" scope="col" colspan="4">1st Person</th>
+            <th class="text-center" scope="col" colspan="4">2nd Person</th>
+            <th scope="col"></th>
+          </tr>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col" class="text-center" colspan="4">My, Mine</th>
+            <th scope="col" class="text-center" colspan="4">My, Mine</th>
+            <th scope="col"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">English</th>
+            <td>Masculine</td>
+            <td>Feminine</td>
+            <td>Neuter</td>
+            <td>Plural</td>
+            <td></td>
+            <td>Masculine</td>
+            <td>Feminine</td>
+            <td>Neuter</td>
+            <td>Plural</td>
+          </tr>
+          <tr>
+            <th scope="row">Nominative</th>
+            <td>Мой</td>
+            <td>Моя</td>
+            <td>Моё</td>
+            <td>Мой</td>
+            <td></td>
+            <td>Твой</td>
+            <td>Твоя</td>
+            <td>Твоё</td>
+            <td>Твои</td>
+          </tr>
+          <tr>
+            <th scope="row">Accusative <br>
+                            Animate
+            </th>
+            <td>Мой <br>
+                Моего</td>
+            <td>Мою</td>
+            <td>Моё</td>
+            <td>Мои <br>
+                Моих
+            </td>
+            <td></td>
+            <td>Твой <br>
+                Твоего
+            </td>
+            <td>Твою</td>
+            <td>Твоё</td>
+            <td>Твои <br>
+                Твоих
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">Dative</th>
+            <td>Моему</td>
+            <td>Моей</td>
+            <td>Моему</td>
+            <td>Моим</td>
+            <td></td>
+            <td>Твоему</td>
+            <td>Твоей</td>
+            <td>Твоему</td>
+            <td>Твоим</td>
+          </tr>
+          <tr>
+            <th scope="row">Genitive</th>
+            <td>Моего</td>
+            <td>Моей</td>
+            <td>Моего</td>
+            <td>Моих</td>
+            <td></td>
+            <td>Твоего</td>
+            <td>Твоей</td>
+            <td>Твоего</td>
+            <td>Твоих</td>
+          </tr>
+          <tr>
+            <th scope="row">Instrumental</th>
+            <td>Моим</td>
+            <td>Моей</td>
+            <td>Моим</td>
+            <td>Моими</td>
+            <td></td>
+            <td>Твоим</td>
+            <td>Твоей</td>
+            <td>Твоим</td>
+            <td>Твоими</td>
+          </tr>
+          <tr>
+            <th scope="row">Prepositional</th>
+            <td>Моём</td>
+            <td>Моей</td>
+            <td>Моём</td>
+            <td>Моих</td>
+            <td></td>
+            <td>Твоём</td>
+            <td>Твоей</td>
+            <td>Твоём</td>
+            <td>Твоих</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <div class="row" style="height: 50px;"></div>
+
+      <h3>Plural Possesive Pronouns</h3>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th class="text-center" scope="col" colspan="4">1st Person</th>
+            <th class="text-center" scope="col" colspan="4">2nd Person</th>
+            <th scope="col"></th>
+          </tr>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col" class="text-center" colspan="4">My, Mine</th>
+            <th scope="col" class="text-center" colspan="4">My, Mine</th>
+            <th scope="col"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">English</th>
+            <td>Masculine</td>
+            <td>Feminine</td>
+            <td>Neuter</td>
+            <td>Plural</td>
+            <td></td>
+            <td>Masculine</td>
+            <td>Feminine</td>
+            <td>Neuter</td>
+            <td>Plural</td>
+          </tr>
+          <tr>
+            <th scope="row">Nominative</th>
+            <td>Наш</td>
+            <td>Наша</td>
+            <td>Наше</td>
+            <td>Наши</td>
+            <td></td>
+            <td>Ваш</td>
+            <td>Ваша</td>
+            <td>Ваше</td>
+            <td>Ваши</td>
+          </tr>
+          <tr>
+            <th scope="row">Accusative <br>
+                            Animate
+            </th>
+            <td>Наш <br>
+                Нашего</td>
+            <td>Нашу</td>
+            <td>Наше</td>
+            <td>Наши <br>
+                Наших
+            </td>
+            <td></td>
+            <td>Ваш <br>
+                Вашего
+            </td>
+            <td>Вашу</td>
+            <td>Ваше</td>
+            <td>Ваши <br>
+                Ваших
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">Dative</th>
+            <td>Нашему</td>
+            <td>Нашей</td>
+            <td>Нашему</td>
+            <td>Нашим</td>
+            <td></td>
+            <td>Вашему</td>
+            <td>Вашей</td>
+            <td>Вашему</td>
+            <td>Вашим</td>
+          </tr>
+          <tr>
+            <th scope="row">Genitive</th>
+            <td>Нашего</td>
+            <td>Нашей</td>
+            <td>Нашего</td>
+            <td>Наших</td>
+            <td></td>
+            <td>Вашего</td>
+            <td>Вашей</td>
+            <td>Вашего</td>
+            <td>Ваших</td>
+          </tr>
+          <tr>
+            <th scope="row">Instrumental</th>
+            <td>Нашим</td>
+            <td>Нашей</td>
+            <td>Нашим</td>
+            <td>Нашими</td>
+            <td></td>
+            <td>Вашим</td>
+            <td>Вашей</td>
+            <td>Вашим</td>
+            <td>Вашими</td>
+          </tr>
+          <tr>
+            <th scope="row">Prepositional</th>
+            <td>Нашем</td>
+            <td>Нашей</td>
+            <td>Нашем</td>
+            <td>Наших</td>
+            <td></td>
+            <td>Вашемм</td>
+            <td>Вашей</td>
+            <td>Вашём</td>
+            <td>Ваших</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <h3>Question Words</h3>
+      <div class="row">
+        <div class="col-6">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">English</th>
+                <th scope="col">What</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Nominative</td>
+                <td>Что</td>
+              </tr>
+              <tr>
+                <td>Accusative</td>
+                <td>Что</td>
+              </tr>
+              <tr>
+                <td>Dative</td>
+                <td>Чему</td>
+              </tr>
+              <tr>
+                <td>Genitive</td>
+                <td>Чего</td>
+              </tr>
+              <tr>
+                <td>Instrumental</td>
+                <td>Чем</td>
+              </tr>
+              <tr>
+                <td>Prepositional</td>
+                <td>Чём</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-6">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">English</th>
+                <th scope="col">Who</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Nominative</td>
+                <td>Кто</td>
+              </tr>
+              <tr>
+                <td>Accusative</td>
+                <td>Кого</td>
+              </tr>
+              <tr>
+                <td>Dative</td>
+                <td>Кому</td>
+              </tr>
+              <tr>
+                <td>Genitive</td>
+                <td>Кого</td>
+              </tr>
+              <tr>
+                <td>Instrumental</td>
+                <td>Кем</td>
+              </tr>
+              <tr>
+                <td>Prepositional</td>
+                <td>Ком</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </body>
