--- a/public/verbs.html
+++ b/public/verbs.html
@@ -10,13 +10,84 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+
+    <link rel="icon" href="diamond.svg" type="image/x-icon" />
   </head>
 
   <body>
-    <div class="container-fluid">
-      <div class="row bg-light">
-        <div id="nav-placeholder"></div>
+    <div id="nav-placeholder"></div>
+
+    <div class="container">
+      <div class="row" style="height: 50px;"></div>
+      <h2>Verbs</h2>
+
+      <div class="row">
+        <div class="col-6">
+          <table class="table">
+            <thead>
+              <tr>
+                <th class="text-center" colspan="4">First Conjugation</th>
+              </tr>
+              <tr>
+                <td class="text-center" colspan="4"> drop -ть and add:</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>Я</th>
+                <td>ю</td>
+                <th>Мы</th>
+                <td>ем</td>
+              </tr>
+              <tr>
+                <th>Ты</th>
+                <td>ешь</td>
+                <th>Вы</th>
+                <td>ете</td>
+              </tr>
+              <tr>
+                <th>Он, Она, Оно</th>
+                <td>ет</td>
+                <th>Они</th>
+                <td>ете</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-6">
+          <table class="table">
+            <thead>
+              <tr>
+                <th class="text-center" colspan="4">Second Conjugation</th>
+              </tr>
+              <tr>
+                <td class="text-center" colspan="4"> drop ить and add:</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>Я</th>
+                <td>ю</td>
+                <th>Мы</th>
+                <td>им</td>
+              </tr>
+              <tr>
+                <th>Ты</th>
+                <td>ишь</td>
+                <th>Вы</th>
+                <td>ите</td>
+              </tr>
+              <tr>
+                <th>Он, Она, Оно</th>
+                <td>ит</td>
+                <th>Они</th>
+                <td>ите</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
+      
     </div>
   </body>
 
