--- a/public/prepositional.html
+++ b/public/prepositional.html
@@ -15,21 +15,17 @@
   </head>
 
   <body>
-    <div class="container-fluid bg-light">
-      <div class="row bg-light">
-        <div id="nav-placeholder"></div>
-      </div>
-    </div>
+    <div id="nav-placeholder"></div>
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-3 bg-light vh-100">
+        <div class="col-3 red-background vh-100">
           <div style="height: 50px"></div>
-          <nav class="nav nav-pills flex-column bg-light">
+          <nav class="nav nav-pills flex-column red-background">
             <a class="nav-link" href="nominative.html">Nominative</a>
             <a class="nav-link" href="accusative.html">Accusative</a>
             <a class="nav-link" href="dative.html">Dative</a>
-            <a class="nav-link" href="genetive.html">Genetive</a>
+            <a class="nav-link" href="genetive.html">Genitive</a>
             <a class="nav-link" href="instrumental.html">Instrumental</a>
             <a class="nav-link active" href="prepositional.html">Prepositional</a>
           </nav>
@@ -38,15 +34,25 @@
           <div style="height: 50px"></div>
           <h2>Prepositional Case</h2>
           <p>
-            The Russian language has six cases to show what function a noun has
-            in a sentence: nominative, genitive, dative, accusative,
-            instrumental, and prepositional. The endings of Russian words change
-            depending on the case they are in. It is best to learn the words and
-            the way they sound in different cases by heart. Learning the cases
-            is the fastest way to sound more fluent in Russian.
-
-            -Nikitina <a href="https://www.thoughtco.com/russian-cases-4768614">blog</a>
+            The prepositional case is used with prepositions.
           </p>
+
+          <table class="table">
+            <thead>
+              <th>Masculine</th>
+              <th>Feminine</th>
+              <th>Neuter</th>
+              <th>Plural</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>студент<span class="red">e</span></td>
+                <td>собак<span class="red">e</span></td>
+                <td>письм<span class="red">e</span></td>
+                <td>студент<span class="red">ax</span>, собак<span class="red">ax</span>, письм<span class="red">аx</span></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
