--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
         </div>
       </div>
       <div class="row">
-        <p>Welcome! This is a website designed to help users learn about 
-          Russian grammar in a one stop shop for all basic grammar needs.
+        <p>Welcome! This is a website designed to help students of Russian learn about 
+          grammar in a one stop shop for all basic grammar needs.
           There are tabs available for learning what each case is for and 
           how words decline for those cases. There are tabs for the pronouns
           and their declinations. There is a tab for verb conjugation. Finally,
