--- a/public/cases.html
+++ b/public/cases.html
@@ -19,7 +19,7 @@
     
     <div class="container-fluid">
       <div class="row">
-        <div class="col-xxl-1 col-xl-2 col-md-3 col-3 red-background vh-100">
+        <div class="col-3 red-background vh-100">
           <div style="height: 50px"></div>
           <nav class="nav nav-pills flex-column red-background">
             <a class="nav-link" href="nominative.html">Nominative</a>
@@ -30,7 +30,7 @@
             <a class="nav-link" href="prepositional.html">Prepositional</a>
           </nav>
         </div>
-        <div class="col-xxl-11 col-xl-10 col-md-9 col-9">
+        <div class="col-9">
           <div style="height: 50px"></div>
           <h2>Cases</h2>
           <p>
