updated about each case

--- a/public/cases.html
+++ b/public/cases.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Cases About</title>
+    <title>About Cases</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +16,7 @@
 
   <body>
     <div id="nav-placeholder"></div>
-    
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-3 red-background vh-100">
@@ -34,14 +34,22 @@
           <div style="height: 50px"></div>
           <h2>Cases</h2>
           <p>
-            The Russian language has six cases to show what function a noun has
-            in a sentence: nominative, genitive, dative, accusative,
-            instrumental, and prepositional. The endings of Russian words change
-            depending on the case they are in. It is best to learn the words and
-            the way they sound in different cases by heart. Learning the cases
-            is the fastest way to sound more fluent in Russian.
-
-            -Nikitina <a href="https://www.thoughtco.com/russian-cases-4768614">blog</a>
+            In Russian, nouns, pronouns, and adjectives are declined to reflect
+            their grammatical role in the sentence. This is known as declension,
+            and it is accomplished through the use of cases. There are six cases
+            in Russian: nominative, genitive, dative, accusative, instrumental,
+            and prepositional. <br />
+            <br />
+            The nominative case is used for the subject of a sentence. The
+            genitive case is used to indicate possession or ownership. The
+            dative case indicates the indirect object of a sentence, while the
+            accusative case indicates the direct object. The instrumental case
+            indicates the means or instrument by which something is done, and
+            the prepositional case is used with certain prepositions. <br />
+            <br />
+            Declension in Russian is a complex and nuanced aspect of the
+            language, and it is important for students of Russian to understand
+            and master it in order to speak and write correctly.
           </p>
         </div>
       </div>
