--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-      <div id="nav-placeholder"></div>
+    <div id="nav-placeholder"></div>
 
     <div class="container">
       <div class="row" style="height: 100px"></div>
@@ -24,13 +24,16 @@
         </div>
       </div>
       <div class="row">
-        <p>Welcome! This is a website designed to help students of Russian learn about 
-          grammar in a one stop shop for all basic grammar needs.
-          There are tabs available for learning what each case is for and 
-          how words decline for those cases. There are tabs for the pronouns
-          and their declinations. There is a tab for verb conjugation. Finally,
-          there is a dictionary built into the navigation bar for translation from 
-          English to Russian and vice versa!
+        <p>
+          This website offers comprehensive grammar lessons and a comprehensive
+          translation dictionary for students of Russian. Our grammar lessons
+          cover all the key aspects of Russian grammar, from sentence structure
+          to verb conjugation and declension. And our translation dictionary is
+          a valuable resource for anyone who needs help with a specific
+          translation. We are constantly updating and expanding our website to
+          provide the best possible learning experience for our students. Thank
+          you for visiting, and we hope you find our resources helpful as you
+          continue to learn Russian.
         </p>
       </div>
     </div>
