--- a/public/instrumental.html
+++ b/public/instrumental.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Instrumental</title>
+    <title>Instrumental Case</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -34,7 +34,25 @@
           <div style="height: 50px"></div>
           <h2>Instrumental Case</h2>
           <p>
-            The accusative case is used to indicate how something is done.
+            The instrumental case is one of six cases in Russian grammar. It is
+            used to indicate the means or instrument by which something is done,
+            as well as to express other relationships between nouns. In Russian,
+            the ending of a noun or pronoun in the instrumental case typically
+            depends on the gender, number, and animacy of the word. <br />
+            <br>
+            For example, the noun "замок" (castle) is masculine and singular, so
+            in the instrumental case it would be written as "замком" (zamkom).
+            But if the noun were feminine, such as "книга" (book), it would be
+            written as "книгой" (knigoy) in the instrumental case. <br />
+            <br>
+            The same rules apply to pronouns. For example, the pronoun "я" (I)
+            is always written as "мной" (mnoy) in the instrumental case,
+            regardless of its gender or number. <br />
+            <br>
+            It is important for students of Russian to understand and master the
+            instrumental case, as it is a crucial part of correct sentence
+            structure in the language. Misusing the instrumental case can lead
+            to confusion or misunderstandings. <br />
           </p>
 
           <table class="table">
@@ -49,7 +67,11 @@
                 <td>студент<span class="red">ом</span></td>
                 <td>собак<span class="red">ой</span></td>
                 <td>письм<span class="red">ом</span></td>
-                <td>студент<span class="red">ами</span>, собак<span class="red">ами</span>, письм<span class="red">ами</span></td>
+                <td>
+                  студент<span class="red">ами</span>, собак<span class="red"
+                    >ами</span
+                  >, письм<span class="red">ами</span>
+                </td>
               </tr>
             </tbody>
           </table>
