--- a/public/accusative.html
+++ b/public/accusative.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Accusative</title>
+    <title>Accusative Case</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,7 +20,6 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-3 red-background vh-100">
-        
           <div style="height: 50px"></div>
           <nav class="nav nav-pills red-background flex-column">
             <a class="nav-link" href="nominative.html">Nominative</a>
@@ -35,7 +34,25 @@
           <div style="height: 50px"></div>
           <h2>Accusative Case</h2>
           <p>
-            The accusative case is used with the object of a sentence.
+            The accusative case is one of six cases in Russian grammar. It is
+            used to indicate the direct object of a sentence, that is, the
+            person or thing that is affected by the action of the verb. In
+            Russian, the ending of a noun or pronoun in the accusative case
+            typically depends on the gender, number, and animacy of the word. <br>
+            <br />
+            For example, the noun "замок" (castle) is masculine and singular, so
+            in the accusative case it would be written as "замок" (zamok). But
+            if the noun were feminine, such as "книга" (book), it would be
+            written as "книгу" (knigu) in the accusative case. <br />
+            <br>
+            The same rules apply to pronouns. For example, the pronoun "я" (I)
+            is always written as "меня" (menya) in the accusative case,
+            regardless of its gender or number. <br />
+            <br>
+            It is important for students of Russian to understand and master the
+            accusative case, as it is a crucial part of correct sentence
+            structure in the language. Misusing the accusative case can lead to
+            confusion or misunderstandings.
           </p>
 
           <table class="table">
@@ -50,7 +67,12 @@
                 <td>студент<span class="red">а</span></td>
                 <td>собак<span class="red">у</span></td>
                 <td>письм<span class="red">о</span></td>
-                <td>студент<span class="red">ов</span>, собак<span class="red"></span>, письм<span class="red">а</span></td>
+                <td>
+                  студент<span class="red">ов</span>, собак<span
+                    class="red"
+                  ></span
+                  >, письм<span class="red">а</span>
+                </td>
               </tr>
             </tbody>
           </table>
