--- a/public/dative.html
+++ b/public/dative.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dative</title>
+    <title>Dative Case</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -34,7 +34,26 @@
           <div style="height: 50px"></div>
           <h2>Dative Case</h2>
           <p>
-            The accusative case is used with the indirect object of a sentence.
+            The dative case is one of six cases in Russian grammar. It is used
+            to indicate the indirect object of a sentence, that is, the person
+            or thing to or for whom the action of the verb is performed. In
+            Russian, the ending of a noun or pronoun in the dative case
+            typically depends on the gender, number, and animacy of the word. <br>
+            <br />
+
+            For example, the noun "замок" (castle) is masculine and singular, so
+            in the dative case it would be written as "замку" (zamku). But if
+            the noun were feminine, such as "книга" (book), it would be written
+            as "книге" (knige) in the dative case. <br />
+            <br>
+            The same rules apply to pronouns. For example, the pronoun "я" (I)
+            is always written as "мне" (mne) in the dative case, regardless of
+            its gender or number. <br />
+            <br>
+            It is important for students of Russian to understand and master the
+            dative case, as it is a crucial part of correct sentence structure
+            in the language. Misusing the dative case can lead to confusion or
+            misunderstandings. <br />
           </p>
 
           <table class="table">
@@ -49,7 +68,11 @@
                 <td>студент<span class="red">у</span></td>
                 <td>собак<span class="red">е</span></td>
                 <td>письм<span class="red">у</span></td>
-                <td>студент<span class="red">ам</span>, собак<span class="red">ам</span>, письм<span class="red">ам</span></td>
+                <td>
+                  студент<span class="red">ам</span>, собак<span class="red"
+                    >ам</span
+                  >, письм<span class="red">ам</span>
+                </td>
               </tr>
             </tbody>
           </table>
