--- a/public/genetive.html
+++ b/public/genetive.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Genetive</title>
+    <title>Genitive Case</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -34,7 +34,25 @@
           <div style="height: 50px"></div>
           <h2>Genitive Case</h2>
           <p>
-            The genitive case is used to show possesion
+            The genitive case is one of six cases in Russian grammar. It is used
+            to indicate possession or ownership, as well as to express other
+            relationships between nouns. In Russian, the ending of a noun or
+            pronoun in the genitive case typically depends on the gender,
+            number, and animacy of the word. <br />
+            <br>
+            For example, the noun "замок" (castle) is masculine and singular, so
+            in the genitive case it would be written as "замка" (zamka). But if
+            the noun were feminine, such as "книга" (book), it would be written
+            as "книги" (knigi) in the genitive case. <br />
+            <br>
+            The same rules apply to pronouns. For example, the pronoun "я" (I)
+            is always written as "меня" (menya) in the genitive case, regardless
+            of its gender or number. <br />
+            <br>
+            It is important for students of Russian to understand and master the
+            genitive case, as it is a crucial part of correct sentence structure
+            in the language. Misusing the genitive case can lead to confusion or
+            misunderstandings. <br />
           </p>
 
           <table class="table">
@@ -49,7 +67,12 @@
                 <td>студент<span class="red">а</span></td>
                 <td>собак<span class="red">и</span></td>
                 <td>письм<span class="red">а</span></td>
-                <td>студент<span class="red">ов</span>, собак<span class="red"></span>, пис<span class="red">е</span>м</td>
+                <td>
+                  студент<span class="red">ов</span>, собак<span
+                    class="red"
+                  ></span
+                  >, пис<span class="red">е</span>м
+                </td>
               </tr>
             </tbody>
           </table>
