--- a/public/nominative.html
+++ b/public/nominative.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Nominative</title>
+    <title>Nominative Case</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -34,8 +34,25 @@
           <div style="height: 50px"></div>
           <h2>Nominative Case</h2>
           <p>
-            The Russian nominative case is used for the subject of a sentence. It is also the dictionary
-            form.
+            The nominative case is one of six cases in Russian grammar. It is
+            used to indicate the subject of a sentence, that is, the person or
+            thing performing the action. In Russian, the ending of a noun or
+            pronoun in the nominative case typically depends on the gender,
+            number, and animacy of the word. <br />
+            <br>
+            For example, the noun "замок" (castle) is masculine and singular, so
+            in the nominative case it would be written as "замок". But
+            if the noun were feminine, such as "книга" (book), it would be
+            written as "книга" (kniga) in the nominative case. <br />
+            <br>
+            The same rules apply to pronouns. For example, the pronoun "я" (I)
+            is always written as "я" (ya) in the nominative case, regardless of
+            its gender or number. <br />
+            <br>
+            It is important for students of Russian to understand and master the
+            nominative case, as it is a crucial part of correct sentence
+            structure in the language. Misusing the nominative case can lead to
+            confusion or misunderstandings. <br />
           </p>
 
           <table class="table">
@@ -50,7 +67,11 @@
                 <td>студент</td>
                 <td>собак<span class="red">а</span></td>
                 <td>письм<span class="red">o</span></td>
-                <td>студент<span class="red">ы</span>, собак<span class="red">и</span>, письм<span class="red">а</span></td>
+                <td>
+                  студент<span class="red">ы</span>, собак<span class="red"
+                    >и</span
+                  >, письм<span class="red">а</span>
+                </td>
               </tr>
             </tbody>
           </table>
