--- a/public/prepositional.html
+++ b/public/prepositional.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Prepositional</title>
+    <title>Prepositional Case</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,14 +27,34 @@
             <a class="nav-link" href="dative.html">Dative</a>
             <a class="nav-link" href="genetive.html">Genitive</a>
             <a class="nav-link" href="instrumental.html">Instrumental</a>
-            <a class="nav-link active" href="prepositional.html">Prepositional</a>
+            <a class="nav-link active" href="prepositional.html"
+              >Prepositional</a
+            >
           </nav>
         </div>
         <div class="col-9">
           <div style="height: 50px"></div>
           <h2>Prepositional Case</h2>
           <p>
-            The prepositional case is used with prepositions.
+            The prepositional case is one of six cases in Russian grammar. It is
+            used with certain prepositions to indicate the relationship between
+            the noun or pronoun and the rest of the sentence. In Russian, the
+            ending of a noun or pronoun in the prepositional case typically
+            depends on the gender, number, and animacy of the word. <br />
+            <br>
+            For example, the noun "замок" (castle) is masculine and singular, so
+            in the prepositional case it would be written as "замке" (zamke).
+            But if the noun were feminine, such as "книга" (book), it would be
+            written as "книге" (knige) in the prepositional case. <br />
+            <br>
+            The same rules apply to pronouns. For example, the pronoun "я" (I)
+            is always written as "мне" (mne) in the prepositional case,
+            regardless of its gender or number. <br />
+            <br>
+            It is important for students of Russian to understand and master the
+            prepositional case, as it is a crucial part of correct sentence
+            structure in the language. Misusing the prepositional case can lead
+            to confusion or misunderstandings. <br />
           </p>
 
           <table class="table">
@@ -49,7 +69,11 @@
                 <td>студент<span class="red">e</span></td>
                 <td>собак<span class="red">e</span></td>
                 <td>письм<span class="red">e</span></td>
-                <td>студент<span class="red">ax</span>, собак<span class="red">ax</span>, письм<span class="red">аx</span></td>
+                <td>
+                  студент<span class="red">ax</span>, собак<span class="red"
+                    >ax</span
+                  >, письм<span class="red">аx</span>
+                </td>
               </tr>
             </tbody>
           </table>
