--- a/public/verbs.html
+++ b/public/verbs.html
@@ -22,7 +22,7 @@
       <h2>Verbs</h2>
 
       <div class="row">
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <table class="table">
             <thead>
               <tr>
@@ -54,7 +54,7 @@
             </tbody>
           </table>
         </div>
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <table class="table">
             <thead>
               <tr>
