--- a/public/cases.html
+++ b/public/cases.html
@@ -19,10 +19,10 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-4 red-background vh-100">
+        <div class="col-3 col-md-2 red-background vh-100">
           <div style="height: 50px"></div>
           <nav class="nav nav-pills flex-column red-background">
-            <a class="nav-link" href="nominative.html">Nominative</a>
+            <a style="padding-left: 0px;" class="nav-link" href="nominative.html">Nominative</a>
             <a class="nav-link" href="accusative.html">Accusative</a>
             <a class="nav-link" href="dative.html">Dative</a>
             <a class="nav-link" href="genetive.html">Genetive</a>
