--- a/public/nav.html
+++ b/public/nav.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-dark navbar-expand-xl nav-bar static-top">
           <div class="container-fluid">
             <a class="navbar-brand white"href="index.html"
-              ><h3>Ultimate Guide to Russian Grammar</h3></a
+              ><h3>Guide to Russian Grammar</h3></a
             >
             <button
               class="navbar-toggler"
