update for phone

--- a/public/cases.html
+++ b/public/cases.html
@@ -19,7 +19,8 @@
 
     <div class="container-fluid">
       <div class="row d-block d-md-none">
-        <nav class="nav nav-pills red-background">
+        <nav class="nav nav-pills red-background scroll">
+          <a class="nav-link" href=""></a>
           <a class="nav-link" href="nominative.html">Nominative</a>
           <a class="nav-link" href="accusative.html">Accusative</a>
           <a class="nav-link" href="dative.html">Dative</a>
@@ -28,6 +29,7 @@
           <a class="nav-link" href="prepositional.html">Prepositional</a>
         </nav>
       </div>
+
       <div class="row">
         <div class="col-2 d-none d-md-block red-background vh-100">
           <div style="height: 50px"></div>
@@ -63,6 +65,7 @@
             and master it in order to speak and write correctly.
           </p>
         </div>
+        <!-- <div class="col-1"></div> -->
       </div>
     </div>
   </body>
