update for phone

--- a/public/cases.html
+++ b/public/cases.html
@@ -20,7 +20,7 @@
     <div class="container-fluid">
       <div class="row d-block d-md-none">
         <nav class="nav nav-pills red-background scroll">
-          <a class="nav-link" href=""></a>
+          <div class="nav-link hide-hover" href=""></div> 
           <a class="nav-link" href="nominative.html">Nominative</a>
           <a class="nav-link" href="accusative.html">Accusative</a>
           <a class="nav-link" href="dative.html">Dative</a>
@@ -65,7 +65,6 @@
             and master it in order to speak and write correctly.
           </p>
         </div>
-        <!-- <div class="col-1"></div> -->
       </div>
     </div>
   </body>
