--- a/public/instrumental.html
+++ b/public/instrumental.html
@@ -18,18 +18,31 @@
     <div id="nav-placeholder"></div>
 
     <div class="container-fluid">
+      <div class="row d-block d-md-none">
+        <nav class="nav nav-pills red-background scroll">
+          <div class="nav-link hide-hover" href=""></div> 
+          <a class="nav-link" href="nominative.html">Nominative</a>
+          <a class="nav-link" href="accusative.html">Accusative</a>
+          <a class="nav-link" href="dative.html">Dative</a>
+          <a class="nav-link" href="genetive.html">Genitive</a>
+          <a class="nav-link active" href="instrumental.html">Instrumental</a>
+          <a class="nav-link" href="prepositional.html">Prepositional</a>
+        </nav>
+      </div>
+
       <div class="row">
-        <div class="col-3 red-background vh-100">
+        <div class="col-2 d-none d-md-block red-background vh-100">
           <div style="height: 50px"></div>
           <nav class="nav nav-pills flex-column red-background">
             <a class="nav-link" href="nominative.html">Nominative</a>
             <a class="nav-link" href="accusative.html">Accusative</a>
             <a class="nav-link" href="dative.html">Dative</a>
-            <a class="nav-link" href="genetive.html">Genitive</a>
+            <a class="nav-link" href="genetive.html">Genetive</a>
             <a class="nav-link active" href="instrumental.html">Instrumental</a>
             <a class="nav-link" href="prepositional.html">Prepositional</a>
           </nav>
         </div>
+        <div class="col-2 d-block d-md-none"></div>
         <div class="col-9">
           <div style="height: 50px"></div>
           <h2>Instrumental Case</h2>
