--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+
+    <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
+    <link rel="icon" href="/favicon.ico" sizes="any">
   </head>
 
   <body>
@@ -35,6 +38,7 @@
           you for visiting, and we hope you find our resources helpful as you
           continue to learn Russian.
         </p>
+
       </div>
     </div>
 
