--- a/public/instrumental.html
+++ b/public/instrumental.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="nominative.html">Nominative</a>
             <a class="nav-link" href="accusative.html">Accusative</a>
             <a class="nav-link" href="dative.html">Dative</a>
-            <a class="nav-link" href="genetive.html">Genetive</a>
+            <a class="nav-link" href="genetive.html">Genitive</a>
             <a class="nav-link active" href="instrumental.html">Instrumental</a>
             <a class="nav-link" href="prepositional.html">Prepositional</a>
           </nav>
