--- a/public/nav.html
+++ b/public/nav.html
@@ -18,6 +18,7 @@
     <div class="container-fluid">
       <div class="row nav-bar">
         <nav class="navbar navbar-dark navbar-expand-xl nav-bar static-top">
+          <a class="navbar-brand" href=""><img style="padding-left: 16px;" src="brand.svg" width = 75 height= 75 alt=""></a>
           <div class="container-fluid">
             <a class="navbar-brand white"href="index.html"
               ><h3>Guide to Russian Grammar</h3></a
@@ -36,7 +37,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link white" aria-current="page" href="index.html"
+                  <a class="nav-link" aria-current="page" href="index.html"
                     >About</a
                   >
                 </li>
